<resources>
    <string name="app_name">Landsat</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_saved_images">Saved Images</string>

    <string name="hint_long">Longitude</string>
    <string name="hint_lat">Latitude</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_saved_imgs">Bookmarked Images</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <!-- Mainactivity strings -->
    <string name="connection_success">Connection to data successful</string>
    <string name="connection_no_servers">Data servers are down at this time. Please try again later</string>
    <string name="connection_invalid">Server was unable to process the invalid request</string>

    <string name="userinput_no_place">Please enter a place</string>
    <string name="userinput_no_date">Please enter a date</string>
    <string name="userinput_no_place_date">Please enter a place and date</string>

    <string name="unable_connect_internet">Unable to connect to the internet</string>

    <string name="result_null">Satellite image not available</string>

    <string name="location_not_found">Unable to find the selected location</string>

    <string name="not_applicable">N/A</string>

    <string name="current_pos">Current Position</string>

    <string name="access_fab">Download satellite image button</string>
    <string name="access_map">Map of selected position</string>
    <string name="access_place_title">Title of selected place</string>
    <string name="access_pic_date">Picture for date row</string>
    <string name="access_chosen_date">Selected date</string>
    <string name="access_pic_lat">Image of latitude row</string>
    <string name="access_chosen_lat">Selected latitude</string>
    <string name="access_pic_long">Image of longitude row</string>
    <string name="access_chosen_long">Selected longitude</string>

    <!-- DetailActivity strings -->

    <string name="database_save">Image saved</string>
    <string name="no_sat_image">Satellite image unavailable</string>

    <string name="access_sat_img">Satellite image</string>
    <string name="access_img_date">Date of image</string>
    <string name="access_img_long">Longitude of image</string>
    <string name="access_img_lat">Latitude of image</string>
    <string name="access_button_filter">Apply filter</string>
    <string name="access_button_save">Save image</string>
    <string name="access_button_share">Share image</string>

    <string name="list_sat_images">Saved satellite image</string>

    <!-- Tutorial strings -->
    <string name="tutorial_title">Landsat Satellite Tutorial</string>
    <string name="landsat_desc">This app provides natural color images taken by the Landsat Satellite between
    2013-2016. The satellite takes images in a 15m by 15m swath over the entire Earth. Enter a place, date, and then
    select the grey download button to obtain the raw satellite image of the selected area.</string>


    <string name="tutorial_cloud_cover">Some images may have cloud cover or glaciers obstructing the
    desired location. Certain locations may also be located at the edge of the satellites path when
    it obtained the image.</string>

    <string name="tutorial_common_uses">The landsat satellite can be used for conservation, environmental, scientific
    efforts, or to simply view a location. Certain functions involve monitoring urban sprawl from year
    to year, shrinking of lakes, vegetation, or hidden geological features.</string>

    <string name="tutorial_common_places">Common places to view include Mt Fuji, Pyramids of Egypt,
    Mt. Kilamanjaro, St. Petersburg, Mt. St. Helens, among many other places!</string>
    <string name="filter_message">Applying filter to image...</string>
    <string name="share_message">Sharing image and information...</string>
    <string name="remove_filter_image">Removing filter from image...</string>


</resources>
