<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/tutorial_title"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:textSize="24dp"></TextView>

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/landsat_desc"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/tutorial_common_uses"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/tutorial_common_places"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/tutorial_cloud_cover"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>